# risk-guardrail-system

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/auth/: __init__.py  authorization.py  config.py  dependencies.py  guard.py  identity.py  jwt.py
apps/api/app/connections/: __init__.py  base.py  models.py  normalization.py  registry.py
apps/api/app/ingestion/: __init__.py  account_models.py  persistence.py  postgres_repository.py
apps/api/app/risk/: __init__.py  persistence.py  postgres_repository.py  state_machine.py
apps/api/migrations/: README.md  env.py  script.py.mako
apps/api/migrations/versions/: 20260305_0001_initial_tenancy_schema.py  20260306_0002_account_snapshot_schema.py  20260309_0003_risk_state_snapshot_schema.py
docs/: OPERATIONS.md  THREAT_MODEL.md  architecture.md  platform_contract.md  roadmap.md  security_model.md  testing_strategy.md
docs/ADRs/: 0001-monorepo-scaffold.md  0002-connections-boundary.md
openapi/: risk-guardrail.v1.json
scripts/: check_openapi.py
tests/contracts/: test_openapi_baseline.py
tests/helpers/: auth_tokens.py
tests/unit/: test_account_snapshot_migration_contract.py  test_account_snapshot_persistence_contract.py  test_api_account_snapshot_ingest_contract.py  test_api_account_snapshot_persistence_integration_contract.py  test_api_account_snapshot_postgres_integration_contract.py  test_api_auth_regressions.py  test_api_risk_evaluation_contract.py  (+13 more)
