[project]
name = "risk-guardrail-api"
version = "0.1.0"
description = "FastAPI service for the Risk Guardrail System"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
