[project]
name = "risk-guardrail-api"
version = "0.1.0"
description = "FastAPI service for the Risk Guardrail System"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2.0",
  "fastapi>=0.116,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
